testsuite/poke.pkl/struct-types-diag-11.pk
/* { dg-do compile } */

type Bar =
  struct
  {
    int i;
    int j;
    int i; /* { dg-error "duplicated" } */
  };
